# kDecontaminer

./: CMakeLists.txt  README.md  allSamples.tsv  analyze_index.cpp  cDBG_partitioner.cpp  commonKmers.cpp  commonKmers.py  contamination_screen.sh  contamination_stats.py  contstats.sh  exp1_workflow.sh  fasta_cleaner.py  fastq_partitioner.cpp  genomes_kmerCounting.py  indexing.py  kmerCount.py  reads_stats.cpp  recover_missing.py  stats_postprocessing.py  transform.py  unitigsTokProcessorFormat.py  workflow.sh  workflow_2.sh
includes/: kseqReader.hpp  readClassifier.hpp  sqliteManager.hpp
src/: kseqReader.cpp  sqliteManager.cpp
